# KT-assistant

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
app/core/: config.py  logger.py
app/models/: schemas.py
app/services/: ai_engine.py  db_service.py  doc_processor.py  vector_service.py
ui/: streamlit.py
